# pymrm

./: .gitignore  MANIFEST.in  README.md  Untitled.ipynb  conf.py  index.rst  mrm_environment.yml  mrm_python_install.md  mrm_requirements.txt  py_mrm.py  py_mrm.rst  pyproject.toml  setup.py  test_mrm.py
.github/: CITATION.cff
.github/workflows/: analysis.yml  github_ci.yml  pylint.yml  python-publish.yml  test.yml  update-citation-cff.yaml  update-citation-cff.yml  validate-citation-cff.yml
docs/sphinx/: Makefile  conf.py
examples/: L4_convection_diffusion_2D.ipynb  L8_pressure_velocity_coupling.ipynb  numjac.py  numjac_stencil.py  pymrm_examples.ipynb  surface_reaction.ipynb
exercises/L1/: Exercise 1.2 - Equilibrium-consecutive reaction system in a batch reactor.ipynb  Exercise 1.3 - Steady state 1D adiabatic fixed bed reactor - solve_ivp.py
exercises/L3/: Exercise 3.1 - one component 1D diffusion.ipynb
py_mrm/: __init__.py  py_mrm.py  py_mrm_examples.ipynb
pymrm/: __init__.py  convection.py  grid.py  helpers.py  interpolate.py  operators.py  pymrm.py  pymrm_core.py  pymrm_examples.ipynb  solve.py
scripts/: build_documentation.sh  ci_setup_common.sh
src/pymrm/: __init__.py  convect.py  helpers.py  interpolate.py  numjac.py  operators.py
test/: test_convect.py  test_grid.py  test_helpers.py  test_interpolate.py  test_operators.py  test_solve.py
tutorials/: diffusion_first_order_kinetics.ipynb  introduction_and_start.ipynb  nonlinear_kinetics.ipynb
