[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pymrm"
version = "1.3.0"
dependencies = [
    "numpy",
    "scipy",
]
authors = [
    {name = "E.A.J.F. Peters", email = "e.a.j.f.peters@tue.nl"},
    {name = "D.R. Rieder", email = "d.r.rieder@tue.nl"}
    {name = "D.R. Rieder", email = "d.r.rieder@tue.nl"}
]
maintainers = [
    {name = "E.A.J.F. Peters", email = "e.a.j.f.peters@tue.nl"},
]
description = "Functions for multiphase reactor modeling"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["MRM", "modeling", "multiphase", "diffusion", "convection"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

[project.urls]
Homepage = "https://gitlab.tue.nl/SMM/research_projects/eajfpeters/pymrm/"
Repository = "https://gitlab.tue.nl/SMM/research_projects/eajfpeters/pymrm/"