[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymrm"
version = "2.0.0"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "numba>=0.58"
]
authors = [
    {name = "E.A.J.F. Peters", email = "e.a.j.f.peters@tue.nl"},
    {name = "M. van Sint Annaland", email= "M.v.SintAnnaland@tue.nl"},
    {name = "M. Galanti", email = "m.galanti@tue.nl"},
    {name = "D.R. Rieder", email = "d.r.rieder@tue.nl"}
]
maintainers = [
    {name = "E.A.J.F. Peters", email = "e.a.j.f.peters@tue.nl"},
]
description = "Functions for multiphase reactor modeling"
readme = "README.md"
keywords = ["MRM", "modeling", "multiphase", "diffusion", "convection"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License"
]

[tool.setuptools.packages.find]
where = ["pymrm"]

[tool.setuptools]
include-package-data = true


[project.urls]
Homepage = "https://github.com/eajfpeters/pymrm"
Repository = "https://github.com/eajfpeters/pymrm"